--- a/gallery/index.html
+++ b/gallery/index.html
@@ -59,8 +59,8 @@
             <!---------------------------------------------->
             <div data-aos="flip-up" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="1.png">
-                  <img src="1.png">
+                <a class="lightbox" href="1.jpg">
+                  <img src="1.jpg">
                 </a>
               </div>
             </div>
@@ -69,8 +69,8 @@
 
             <div data-aos="flip-up" data-aos-delay="20" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="2.png">
-                  <img src="2.png">
+                <a class="lightbox" href="2.jpg">
+                  <img src="2.jpg">
                 </a>
               </div>
             </div>
@@ -78,8 +78,8 @@
 
             <div data-aos="flip-up" data-aos-delay="40" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="3.png">
-                  <img src="3.png">
+                <a class="lightbox" href="3.jpg">
+                  <img src="3.jpg">
                 </a>
 
               </div>
@@ -88,8 +88,8 @@
 
             <div data-aos="flip-up" data-aos-delay="60" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="4.png">
-                  <img src="4.png">
+                <a class="lightbox" href="4.jpg">
+                  <img src="4.jpg">
                 </a>
               </div>
             </div>
@@ -97,8 +97,8 @@
 
             <div data-aos="flip-up" data-aos-delay="80" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="5.png">
-                  <img src="5.png">
+                <a class="lightbox" href="5.mp4">
+                  <source src="5.mp4" type="video/mp4">
                 </a>
               </div>
             </div>
@@ -106,8 +106,8 @@
 
             <div data-aos="flip-up" data-aos-delay="100" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="6.png">
-                  <img src="6.png">
+                <a class="lightbox" href="6.mp4">
+                  <source src="6.mp4" type="video/mp4">
                 </a>
               </div>
             </div>
@@ -115,8 +115,8 @@
 
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="7.png">
-                  <img src="7.png">
+                <a class="lightbox" href="7.mp4">
+                  <source src="7.mp4" type="video/mp4">
                 </a>
               </div>
             </div>
@@ -124,8 +124,8 @@
 
             <div data-aos="flip-up" data-aos-delay="140" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="8.png">
-                  <img src="8.png">
+                <a class="lightbox" href="8.mp4">
+                  <source src="8.mp4" type="video/mp4">
                 </a>
               </div>
             </div>
@@ -133,11 +133,48 @@
 
             <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="9.png">
-                  <img src="9.png">
+                <a class="lightbox" href="9.mp4">
+                  <source src="9.mp4" type="video/mp4">
                 </a>
               </div>
             </div>
+             <!---------------------------------------------->
+
+            <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="10.mp4">
+                  <source src="10.mp4" type="video/mp4">
+                </a>
+              </div>
+            </div>
+             <!---------------------------------------------->
+
+            <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="11.mp4">
+                  <source src="11.mp4" type="video/mp4">
+                </a>
+              </div>
+            </div>
+             <!---------------------------------------------->
+
+            <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="12.mp4">
+                  <source src="12.mp4" type="video/mp4">
+                </a>
+              </div>
+            </div>
+             <!---------------------------------------------->
+
+            <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
+              <div class="thumbnail">
+                <a class="lightbox" href="13.jpg">
+                  <img src="13.jpg">
+                </a>
+              </div>
+            </div>
+             <!---------------------------------------------->
 
 
 
