--- a/gallery/index.html
+++ b/gallery/index.html
@@ -97,9 +97,9 @@
 
             <div data-aos="flip-up" data-aos-delay="80" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="5.mp4">
+                <video class="lightbox" controls>
                   <source src="5.mp4" type="video/mp4">
-                </a>
+                </video>
               </div>
             </div>
             <!---------------------------------------------->
