--- a/gallery/index.html
+++ b/gallery/index.html
@@ -97,7 +97,7 @@
 
             <div data-aos="flip-up" data-aos-delay="80" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <video class="lightbox" controls>
+                <video class="lightbox" width = "100" controls>
                   <source src="5.mp4" type="video/mp4">
                 </video>
               </div>
