--- a/gallery/index.html
+++ b/gallery/index.html
@@ -106,63 +106,63 @@
 
             <div data-aos="flip-up" data-aos-delay="100" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="6.mp4">
+                <video class="lightbox" controls style="width: 100%; height: auto;">
                   <source src="6.mp4" type="video/mp4">
-                </a>
+                </video>
               </div>
             </div>
             <!---------------------------------------------->
 
             <div data-aos="flip-up" data-aos-delay="120" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="7.mp4">
+                <video class="lightbox" controls style="width: 100%; height: auto;">
                   <source src="7.mp4" type="video/mp4">
-                </a>
+                </video>
               </div>
             </div>
             <!---------------------------------------------->
 
             <div data-aos="flip-up" data-aos-delay="140" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="8.mp4">
+               <video class="lightbox" controls style="width: 100%; height: auto;">
                   <source src="8.mp4" type="video/mp4">
-                </a>
+                </video>
               </div>
             </div>
             <!---------------------------------------------->
 
             <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="9.mp4">
+                <video class="lightbox" controls style="width: 100%; height: auto;">
                   <source src="9.mp4" type="video/mp4">
-                </a>
+                </video>
               </div>
             </div>
              <!---------------------------------------------->
 
             <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="10.mp4">
+                <video class="lightbox" controls style="width: 100%; height: auto;">
                   <source src="10.mp4" type="video/mp4">
-                </a>
+                </video>
               </div>
             </div>
              <!---------------------------------------------->
 
             <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="11.mp4">
+                <video class="lightbox" controls style="width: 100%; height: auto;">
                   <source src="11.mp4" type="video/mp4">
-                </a>
+                </video>
               </div>
             </div>
              <!---------------------------------------------->
 
             <div data-aos="flip-up" data-aos-delay="160" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="12.mp4">
+                <video class="lightbox" controls style="width: 100%; height: auto;">
                   <source src="12.mp4" type="video/mp4">
-                </a>
+                </video>
               </div>
             </div>
              <!---------------------------------------------->
