--- a/Memories/Index.html
+++ b/Memories/Index.html
@@ -44,17 +44,77 @@ body {
 
 
 .slide:first-child {
-  background: url("1.png") no-repeat
+  background: url("1.jpg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(2) {
-  background: url("2.png") no-repeat
+  background: url("2.jpg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("3.png") no-repeat
+  background: url("3.mpv") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(4) {
+  background: url("4.mp4") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(5) {
+  background: url("5.mp4") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(6) {
+  background: url("6.mp4") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(7) {
+  background: url("7.mp4") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(8) {
+  background: url("8.mp4") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(9) {
+  background: url("9.mp4") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(10) {
+  background: url("10.mp4") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(11) {
+  background: url("11.mp4") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(12) {
+  background: url("12.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(13) {
+  background: url("13.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(14) {
+  background: url("14.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(15) {
+  background: url("15.mp4") no-repeat
     center top/cover;
 }
 
