--- a/Memories/Index.html
+++ b/Memories/Index.html
@@ -172,6 +172,18 @@ body {
     <div class="slide current"></div>
     <div class="slide"></div>
     <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
 
   </div>
   <div class="buttons">
