--- a/Memories/Index.html
+++ b/Memories/Index.html
@@ -37,20 +37,25 @@ body {
   height: 100%;
   opacity: 0;
   transition: opacity 0.4s ease-in-out;
-  background-size: cover;
-  background-position: center
+  /*background-size: cover;
+  background-position: center*/
+  display: flex; /* Use flex to center the content */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  overflow: hidden; /* Hide overflow */
 }
 
 .slide.current {
   opacity: 1;
 }
 
-.slide video {
-  width: 100%; /* Make the video responsive */
-  height: auto; /* Maintain aspect ratio */
-  position: absolute;
-  top: 0;
-  left: 0;
+.slide img, .slide video {
+  min-width: 100%; /* Make the video responsive */
+  min-height: 100%; /* Maintain aspect ratio */
+  /*position: absolute;*/
+  object-fit: cover;
+  /*top: 0;
+  left: 0;*/
 }
 
 /*.slide:first-child {
@@ -200,37 +205,37 @@ body {
   <div class="slide current" style="background-image: url('1.jpg');"></div>
   <div class="slide" style="background-image: url('2.jpg');"></div>
   <div class="slide">
-    <video src="3.mp4" autoplay loop muted></video>
+    <video src="3.mp4" autoplay loop></video>
   </div>
   <div class="slide">
-    <video src="4.mp4" autoplay loop muted></video>
+    <video src="4.mp4" autoplay loop></video>
   </div>
   <div class="slide">
-    <video src="5.mp4" autoplay loop muted></video>
+    <video src="5.mp4" autoplay loop></video>
   </div>
   <div class="slide">
-    <video src="6.mp4" autoplay loop muted></video>
+    <video src="6.mp4" autoplay loop></video>
   </div>
   <div class="slide">
-    <video src="7.mp4" autoplay loop muted></video>
+    <video src="7.mp4" autoplay loop></video>
   </div>
   <div class="slide">
-    <video src="8.mp4" autoplay loop muted></video>
+    <video src="8.mp4" autoplay loop></video>
   </div>
   <div class="slide">
-    <video src="9.mp4" autoplay loop muted></video>
+    <video src="9.mp4" autoplay loop></video>
   </div>
   <div class="slide">
-    <video src="10.mp4" autoplay loop muted></video>
+    <video src="10.mp4" autoplay loop></video>
   </div>
   <div class="slide">
-    <video src="11.mp4" autoplay loop muted></video>
+    <video src="11.mp4" autoplay loop></video>
   </div>
   <div class="slide" style="background-image: url('12.jpg');"></div>
   <div class="slide" style="background-image: url('13.jpg');"></div>
   <div class="slide" style="background-image: url('14.jpg');"></div>
   <div class="slide">
-    <video src="15.mp4" autoplay loop muted></video>
+    <video src="15.mp4" autoplay loop></video>
   </div>
     
   <!-- Continue with other slides similarly -->
