--- a/Memories/Index.html
+++ b/Memories/Index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -200,8 +200,8 @@ body {
     <div class="slide"></div>
     <div class="slide"></div>
 
-  </div> -->
-  <div class="slider">
+  </div> -->  -->
+  <!-- <div class="slider">
   <div class="slide current" style="background-image: url('1.jpg');"></div>
   <div class="slide" style="background-image: url('2.jpg');"></div>
   <div class="slide">
@@ -239,15 +239,15 @@ body {
   </div>
     
   <!-- Continue with other slides similarly -->
-</div>
+</div> -->
 
   
-  <div class="buttons">
+ <!-- <div class="buttons">
     <button id="prev"><i class="fas fa-arrow-left"></i></button>
     <button id="next"><i class="fas fa-arrow-right"></i></button>
-  </div>
+  </div> -->
   <!-- partial -->
-  <script>
+  <!-- <script>
     const slides = document.querySelectorAll(".slide");
     const nextButton = document.getElementById("next");
     const prevButton = document.getElementById("prev");
@@ -292,10 +292,195 @@ body {
 
     if (auto) {
       slideInterval = setInterval(nextSlide, intervalTime);
-    }
+    } -->
 
-  </script>
+ <!--  </script>
 
 </body>
 
+</html> -->
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Responsive Image and Video Slider</title>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css'>
+  <style>
+    @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap");
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: "Lexend", sans-serif;
+      background-color: #362a2b;
+      color: #e5ebf3;
+    }
+
+    .slider {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    .slide {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: opacity 0.4s ease-in-out;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+
+    .slide.current {
+      opacity: 1;
+    }
+
+    .slide img,
+    .slide video {
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* Use 'contain' to see the whole image/video */
+    }
+
+    .buttons button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      border: 2px solid #e5ebf3;
+      background-color: transparent;
+      color: #e5ebf3;
+      cursor: pointer;
+      padding: 13px 15px;
+      border-radius: 50%;
+      outline: none;
+    }
+
+    .buttons button#prev {
+      left: 1rem;
+    }
+
+    .buttons button#next {
+      right: 1rem;
+    }
+
+    .buttons button:hover {
+      background-color: #e5ebf3;
+      color: #362a2b;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="slider">
+    <div class="slide current" style="background-image: url('1.jpg');"></div>
+    <div class="slide" style="background-image: url('2.jpg');"></div>
+    <div class="slide">
+      <video src="3.mp4" autoplay loop controls></video>
+    </div>
+    <div class="slide">
+      <video src="4.mp4" autoplay loop controls></video>
+    </div>
+    <div class="slide">
+    <video src="5.mp4" autoplay loop></video>
+  </div>
+  <div class="slide">
+    <video src="6.mp4" autoplay loop></video>
+  </div>
+  <div class="slide">
+    <video src="7.mp4" autoplay loop></video>
+  </div>
+  <div class="slide">
+    <video src="8.mp4" autoplay loop></video>
+  </div>
+  <div class="slide">
+    <video src="9.mp4" autoplay loop></video>
+  </div>
+  <div class="slide">
+    <video src="10.mp4" autoplay loop></video>
+  </div>
+  <div class="slide">
+    <video src="11.mp4" autoplay loop></video>
+  </div>
+  <div class="slide" style="background-image: url('12.jpg');"></div>
+  <div class="slide" style="background-image: url('13.jpg');"></div>
+  <div class="slide" style="background-image: url('14.jpg');"></div>
+  <div class="slide">
+    <video src="15.mp4" autoplay loop></video>
+  </div>
+    
+    <!-- Add more unique slides as needed -->
+  </div>
+  <div class="buttons">
+    <button id="prev"><i class="fas fa-arrow-left"></i></button>
+    <button id="next"><i class="fas fa-arrow-right"></i></button>
+  </div>
+
+  <script>
+    const slides = document.querySelectorAll(".slide");
+    const nextButton = document.getElementById("next");
+    const prevButton = document.getElementById("prev");
+    const auto = true;
+    const intervalTime = 5000;
+    let slideInterval;
+
+    const nextSlide = () => {
+      const current = document.querySelector(".current");
+      current.classList.remove("current");
+      if (current.nextElementSibling) {
+        current.nextElementSibling.classList.add("current");
+      } else {
+        slides[0].classList.add("current");
+      }
+    };
+
+    const prevSlide = () => {
+      const current = document.querySelector(".current");
+      current.classList.remove("current");
+      if (current.previousElementSibling) {
+        current.previousElementSibling.classList.add("current");
+      } else {
+        slides[slides.length - 1].classList.add("current");
+      }
+    };
+
+    nextButton.addEventListener("click", () => {
+      nextSlide();
+      if (auto) {
+        clearInterval(slideInterval);
+        slideInterval = setInterval(nextSlide, intervalTime);
+      }
+    });
+
+    prevButton.addEventListener("click", () => {
+      prevSlide();
+      if (auto) {
+        clearInterval(slideInterval);
+        slideInterval = setInterval(nextSlide, intervalTime);
+      }
+    });
+
+    if (auto) {
+      slideInterval = setInterval(nextSlide, intervalTime);
+    }
+  </script>
+</body>
+
 </html>
+
