--- a/Memories/Index.html
+++ b/Memories/Index.html
@@ -398,31 +398,31 @@ body {
       <video src="4.mp4" autoplay loop controls></video>
     </div>
     <div class="slide">
-    <video src="5.mp4" autoplay loop></video>
+    <video src="5.mp4" autoplay loop controls></video>
   </div>
   <div class="slide">
-    <video src="6.mp4" autoplay loop></video>
+    <video src="6.mp4" autoplay loop controls></video>
   </div>
   <div class="slide">
-    <video src="7.mp4" autoplay loop></video>
+    <video src="7.mp4" autoplay loop controls></video>
   </div>
   <div class="slide">
-    <video src="8.mp4" autoplay loop></video>
+    <video src="8.mp4" autoplay loop controls></video>
   </div>
   <div class="slide">
-    <video src="9.mp4" autoplay loop></video>
+    <video src="9.mp4" autoplay loop controls></video>
   </div>
   <div class="slide">
-    <video src="10.mp4" autoplay loop></video>
+    <video src="10.mp4" autoplay loop controls></video>
   </div>
   <div class="slide">
-    <video src="11.mp4" autoplay loop></video>
+    <video src="11.mp4" autoplay loop controls></video>
   </div>
   <div class="slide" style="background-image: url('12.jpg');"></div>
   <div class="slide" style="background-image: url('13.jpg');"></div>
   <div class="slide" style="background-image: url('14.jpg');"></div>
   <div class="slide">
-    <video src="15.mp4" autoplay loop></video>
+    <video src="15.mp4" autoplay loop controls></video>
   </div>
     
     <!-- Add more unique slides as needed -->
