--- a/Memories/Index.html
+++ b/Memories/Index.html
@@ -201,37 +201,37 @@ body {
     <div class="slide current" style="background-image: url('1.jpg');"></div>
     <div class="slide" style="background-image: url('2.jpg');"></div>
     <div class="slide">
-      <video src="3.mp4" autoplay loop controls></video>
+      <video src="3.mp4" autoplay loop ></video>
     </div>
     <div class="slide">
-      <video src="4.mp4" autoplay loop controls></video>
+      <video src="4.mp4" autoplay loop ></video>
     </div>
     <div class="slide">
-      <video src="5.mp4" autoplay loop controls></video>
+      <video src="5.mp4" autoplay loop ></video>
     </div>
     <div class="slide">
-      <video src="6.mp4" autoplay loop controls></video>
+      <video src="6.mp4" autoplay loop ></video>
     </div>
     <div class="slide">
-      <video src="7.mp4" autoplay loop controls></video>
+      <video src="7.mp4" autoplay loop ></video>
     </div>
     <div class="slide">
-      <video src="8.mp4" autoplay loop controls></video>
+      <video src="8.mp4" autoplay loop ></video>
     </div>
     <div class="slide">
-      <video src="9.mp4" autoplay loop controls></video>
+      <video src="9.mp4" autoplay loop ></video>
     </div>
     <div class="slide">
-      <video src="10.mp4" autoplay loop controls></video>
+      <video src="10.mp4" autoplay loop ></video>
     </div>
     <div class="slide">
-      <video src="11.mp4" autoplay loop controls></video>
+      <video src="11.mp4" autoplay loop ></video>
     </div>
     <div class="slide" style="background-image: url('12.jpg');"></div>
     <div class="slide" style="background-image: url('13.jpg');"></div>
     <div class="slide" style="background-image: url('14.jpg');"></div>
     <div class="slide">
-      <video src="15.mp4" autoplay loop controls></video>
+      <video src="15.mp4" autoplay loop ></video>
     </div>
     
   <!-- Continue with other slides similarly -->
