--- a/Memories/Index.html
+++ b/Memories/Index.html
@@ -201,7 +201,7 @@ body {
     <div class="slide current" style="background-image: url('1.jpg');"></div>
     <div class="slide" style="background-image: url('2.jpg');"></div>
     <div class="slide">
-      <video src="3.mp4" autoplay loop ></video>
+      <video src="3.mp4" autoplay loop muted></video>
     </div>
     <div class="slide">
       <video src="4.mp4" autoplay loop ></video>
