--- a/Memories/Index.html
+++ b/Memories/Index.html
@@ -213,9 +213,9 @@ body {
     <div class="slide">
       <video src="6.mp4" autoplay loop muted></video>
     </div>
-    <div class="slide">
+    <!-- <div class="slide">
       <video src="7.mp4" autoplay loop muted></video>
-    </div>
+    </div> -->
     <div class="slide">
       <video src="8.mp4" autoplay loop muted></video>
     </div>
@@ -225,15 +225,15 @@ body {
     <div class="slide">
       <video src="10.mp4" autoplay loop muted></video>
     </div>
-    <div class="slide">
+    <!--<div class="slide">
       <video src="20211023_203800.mp4" autoplay loop muted></video>
-    </div>
+    </div> -->
     <div class="slide" style="background-image: url('12.jpg');"></div>
     <div class="slide" style="background-image: url('13.jpg');"></div>
     <div class="slide" style="background-image: url('20211229_220424.jpg');"></div>
-    <div class="slide">
+    <!-- <div class="slide">
       <video src="20220326_212652 (2)_001_001.mp4" autoplay loop muted></video>
-    </div>
+    </div> -->
     
     
     <!-- Add more slides as needed -->
