--- a/photo-gallery/gallery.html
+++ b/photo-gallery/gallery.html
@@ -205,7 +205,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js'></script>
 
   <script>
-    const imgUrls = ['IMG-20201022-WA0061.jpg', '2.jpeg', '3.jpeg', '4.jpeg', '5.jpeg', '6.jpeg', '7.jpeg', '8.jpeg', '9.jpeg', '10.jpeg', '11.jpeg', '12.jpeg'];
+    const imgUrls = ['IMG-20201022-WA0061.jpg', 'IMG-20201022-WA0064.jpg', '3.jpeg', '4.jpeg', '5.jpeg', '6.jpeg', '7.jpeg', '8.jpeg', '9.jpeg', '10.jpeg', '11.jpeg', '12.jpeg'];
 
 
     class Gallery extends React.Component {
