--- a/photo-gallery/gallery.html
+++ b/photo-gallery/gallery.html
@@ -205,7 +205,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js'></script>
 
   <script>
-    const imgUrls = ['IMG-20201022-WA0061.jpg', 'IMG-20201022-WA0064.jpg', 'IMG-20201024-WA0011.jpg', 'IMG-20211107-WA0149.jpg', 'IMG-20211107-WA0150.jpg', 'IMG-20211127-WA0000.jpg', 'IMG-20221216-WA0076.jpg', '8.jpeg', '9.jpeg', '10.jpeg', '11.jpeg', '12.jpeg'];
+    const imgUrls = ['IMG-20201022-WA0061.jpg', 'IMG-20201022-WA0064.jpg', 'IMG-20201024-WA0011.jpg', 'IMG-20211107-WA0149.jpg', 'IMG-20211107-WA0150.jpg', 'IMG-20211127-WA0000.jpg', 'IMG-20221216-WA0076.jpg', 'IMG-20230806-WA0014.jpg', '9.jpeg', '10.jpeg', '11.jpeg', '12.jpeg'];
 
 
     class Gallery extends React.Component {
