--- a/photo-gallery/gallery.html
+++ b/photo-gallery/gallery.html
@@ -205,7 +205,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js'></script>
 
   <script>
-    const imgUrls = ['IMG-20201022-WA0061.jpg', 'IMG-20230802-WA0067.jpg', 'IMG-20201024-WA0011.jpg', 'IMG-20211107-WA0149.jpg', 'IMG-20211107-WA0150.jpg', 'IMG-20211127-WA0000.jpg', 'IMG-20221216-WA0076.jpg', 'IMG-20230806-WA0014.jpg', 'IMG_20230112_231420_265.jpg', 'Screenshot_20231221-231108_Instagram.jpg', 'Screenshot_20231221-231230_Instagram.jpg', 'Screenshot_20231221-231240_Instagram.jpg'];
+    const imgUrls = ['IMG-20201022-WA0061.jpg', 'IMG-20230802-WA0067.jpg', 'Screenshot_20231221-231132_Instagram.jpg', 'IMG-20211107-WA0149.jpg', 'IMG-20211107-WA0150.jpg', 'IMG-20211127-WA0000.jpg', 'IMG-20221216-WA0076.jpg', 'IMG-20230806-WA0014.jpg', 'IMG_20230112_231420_265.jpg', 'Screenshot_20231221-231108_Instagram.jpg', 'Screenshot_20231221-231230_Instagram.jpg', 'Screenshot_20231221-231240_Instagram.jpg'];
 
 
     class Gallery extends React.Component {
