--- a/photo-gallery/gallery.html
+++ b/photo-gallery/gallery.html
@@ -68,6 +68,8 @@
 
     .gallery-grid img {
       width: 100%;
+      height: 200px; /* added */
+      object-fit: cover; /* added*/
       border: 5px solid #fff;
     }
 
