--- a/photo-gallery/gallery.html
+++ b/photo-gallery/gallery.html
@@ -139,7 +139,10 @@
     }
 
     .modal img {
-      width: 100%;
+      width: auto;
+      height: auto;
+      max-width: 100%;
+      max-height: 90vh;
       border: 5px solid #fff;
     }
 
