--- a/photo-gallery/gallery.html
+++ b/photo-gallery/gallery.html
@@ -111,6 +111,9 @@
     }
 
     .modal {
+      position: flex;
+      justify-content: center;
+      align-items: center;
       position: fixed;
       z-index: 999;
       width: 50%;
