--- a/photo-gallery/gallery.html
+++ b/photo-gallery/gallery.html
@@ -197,6 +197,9 @@
     }
 
     .modal-body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       position: relative;
     }
   </style>
