--- a/photo-gallery/gallery.html
+++ b/photo-gallery/gallery.html
@@ -111,16 +111,18 @@
     }
 
     .modal {
-      position: flex;
+      display: flex;
       justify-content: center;
       align-items: center;
       position: fixed;
       z-index: 999;
       width: 50%;
       max-width: 800px;
+      max-height: 90vh; /* added */
       top: 50%;
       left: 50%;
       transform: translate3d(-50%, -50%, 0);
+      overflow: hidden; /* added*/
     }
 
     @media (min-width: 20em) {
@@ -145,7 +147,7 @@
       width: auto;
       height: auto;
       max-width: 100%;
-      max-height: 90vh;
+      max-height: 80vh; /* ujusted from 80 to 90 */
       border: 5px solid #fff;
     }
 
@@ -200,7 +202,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      position: relative;
+      /*position: relative;*/
     }
   </style>
 
