--- a/photo-gallery/gallery.html
+++ b/photo-gallery/gallery.html
@@ -118,7 +118,7 @@
       z-index: 999;
       width: 60%;
       max-width: 1000px;
-      max-height: 90vh; /* added */
+      max-height: 100vh; /* added */  /* I changed it from 90vh*/
       top: 50%;
       left: 50%;
       transform: translate3d(-50%, -50%, 0);
@@ -147,7 +147,7 @@
       width: auto;
       height: auto;
       max-width: 100%;
-      max-height: 90vh; /* ujusted from 80 to 90 */
+      max-height: 100vh; /* ujusted from 80 to 100 */
       border: 5px solid #fff;
     }
 
