--- a/coffee/index.html
+++ b/coffee/index.html
@@ -38,7 +38,7 @@
     .thumbnail>img {
       display: block;
       max-width: 100%;
-      height: auto;
+      height: 1064px;
     }
   </style>
 
