--- a/coffee/index.html
+++ b/coffee/index.html
@@ -31,6 +31,11 @@
     }
 
 
+    .thumbnail img {
+      height: 1064px; /* Set a fixed height */
+      object-fit: cover; /* Scale the image to cover the area */
+    }
+
     .carousel-inner>.item>a>img,
     .carousel-inner>.item>img,
     .img-responsive,
