--- a/coffee/index.html
+++ b/coffee/index.html
@@ -20,6 +20,11 @@
       border: none;
       transition: 0.15s ease-in-out;
       box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+
+      display: flex; /* Use flexbox */
+     justify-content: center; /* Center image horizontally */
+     align-items: center; /* Center image vertically */
+     height: 200px; /* Set a fixed height for the thumbnail */
     }
 
     .tz-gallery .thumbnail:hover {
@@ -30,11 +35,11 @@
       background-color: transparent !important;
     }
 
-
-    .thumbnail img {
-      height: 150px; /* Set a fixed height */
-      object-fit: cover; /* Scale the image to cover the area */
-    }
+    .tz-gallery .thumbnail img {
+    height: 100%; /* Make the image fill the thumbnail height */
+    width: auto; /* Maintain aspect ratio */
+    object-fit: cover; /* Scale the image to cover the area */
+  }
 
     .carousel-inner>.item>a>img,
     .carousel-inner>.item>img,
