--- a/coffee/index.html
+++ b/coffee/index.html
@@ -40,6 +40,16 @@
       max-width: 100%;
       height: auto;
     }
+
+    .quote {
+      background-color: #F5DEB3; /* Light brown background */
+      color: #8B4513; /* Dark brown font */
+      font-family: Georgia, serif; /* Suitable font for quotes */
+      font-size: 18px;
+      padding: 20px;
+      margin: 20px 0;
+      text-align: center;
+    }
   </style>
 
 </head>
@@ -64,7 +74,15 @@
                 </a>
               </div>
             </div>
+           <!---------------------------------------------->
 
+            <div data-aos="flip-up" data-aos-delay="20" class="col-sm-6 col-md-4">
+              <div class="quote">   
+
+                Another day, another cup of coffee
+              </div>
+            </div>
+            
             <!---------------------------------------------->
             <div data-aos="flip-up" data-aos-delay="20" class="col-sm-6 col-md-4">
               <div class="thumbnail">
