--- a/coffee/index.html
+++ b/coffee/index.html
@@ -47,7 +47,7 @@
       font-family: Georgia, serif; /* Suitable font for quotes */
       font-size: 18px;
       padding: 20px;
-      margin: 500px 0;
+      margin-top: 200px;
       text-align: center;
     }
   </style>
