--- a/coffee/index.html
+++ b/coffee/index.html
@@ -79,7 +79,7 @@
             <div data-aos="flip-up" data-aos-delay="20" class="col-sm-6 col-md-4">
               <div class="quote">   
 
-                Another day, another cup of coffee
+                ♡⃛📷 Another day, another cup of coffee 𝄢
               </div>
             </div>
             
