--- a/coffee/index.html
+++ b/coffee/index.html
@@ -47,6 +47,7 @@
       font-family: Georgia, serif; /* Suitable font for quotes */
       font-size: 18px;
       padding: 20px;
+      margin: 5px, 0px;
       text-align: center;
     }
   </style>
