--- a/coffee/index.html
+++ b/coffee/index.html
@@ -47,7 +47,6 @@
       font-family: Georgia, serif; /* Suitable font for quotes */
       font-size: 18px;
       padding: 20px;
-      margin: 10px, 0px;
       text-align: center;
     }
   </style>
@@ -81,6 +80,7 @@
 
                 𝄢 Another day, another cup of coffee ˙✧˖°📸⋆｡ ˚
               </div>
+              <div> 🤍 🩶 </div>
             </div>
             
             <!---------------------------------------------->
