--- a/coffee/index.html
+++ b/coffee/index.html
@@ -80,7 +80,7 @@
 
                 𝄢 Another day, another cup of coffee ˙✧˖°📸⋆｡ ˚
               </div>
-              <div> 🤍 🤍 🤍 🤍 🤍 🤍 🤍 x x x x x x x 🤍 🤍 🤍 🤍 🤍 🤍 🤍 </div>
+              <div> 🤍 🤍 🤍 🤍 🤍 </div>
             </div>
             
             <!---------------------------------------------->
